Update python basics 2.ipynb

--- a/python basics 2.ipynb
+++ b/python basics 2.ipynb
@@ -34,7 +34,7 @@
     }
    ],
    "source": [
-    "for item in seq:              # item/ jelly/ x/y/z\n",
+    "for item in seq:              # item/x/y/z\n",
     "    print(item)"
    ]
   },
@@ -1703,3 +1703,5 @@
  "nbformat": 4,
  "nbformat_minor": 4
 }
+
+Great Job!
